// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom dot color 1`] = `
<div
  style={
    Object {
      "width": 64,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "red",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "red",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "red",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 48,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "red",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "red",
          "borderRadius": 2,
          "boxShadow": undefined,
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "left": 4,
          "marginTop": 4,
          "muiPrepared": true,
          "position": "absolute",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`custom style 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "width": 80,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 48,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 64,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "boxShadow": undefined,
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "left": 4,
          "marginTop": 4,
          "muiPrepared": true,
          "position": "absolute",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`onDotClick handler 1`] = `
<div
  style={
    Object {
      "width": 48,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "boxShadow": undefined,
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "left": 4,
          "marginTop": 4,
          "muiPrepared": true,
          "position": "absolute",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`three dots, first is selected 1`] = `
<div
  style={
    Object {
      "width": 48,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        style={
          Object {
            "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            "backgroundColor": "#fff",
            "borderRadius": "50%",
            "boxShadow": undefined,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.87)",
            "fontFamily": "Roboto, sans-serif",
            "muiPrepared": true,
            "opacity": 0.5,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "boxShadow": undefined,
          "boxSizing": "border-box",
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "Roboto, sans-serif",
          "left": 4,
          "marginTop": 4,
          "muiPrepared": true,
          "position": "absolute",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;
